fix: 23-remove-margins-from-app (remove ff scrollbar widths) (#47)

--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,10 @@ body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
   height: 100vh;
+  max-height: 100vh;
+  position: relative;
+}
+
+* {
+  scrollbar-width: none; /* firefox */
 }
